--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<section id="header">
 				<div class="inner">
 					<span ><img src="images/profile.JPG" alt="" height="300px" width="300px" class="profile_image"/></span>
-					<h1>Hi, I'm <strong>Suprabhat Kumar</strong>, a final year<br />
-					CSE undergraduate student at National Institute of Technology, Patna.</h1>
+					<h1>Hi, I'm <strong>Suprabhat Kumar</strong>, a Software Developer<br />
+					at Blogvault</h1>
 				
 					<ul class="actions special">
 						<li><a href="#" class="button scrolly">About Me</a></li>
@@ -37,7 +37,7 @@
 								<h2> Experience
 								</h2>
 							</header>
-							<p> I am currently working as a software developer intern at Blogvault. I develop optimiser plugin for WordPress websites. 
+							<p> I am currently working as a software developer at Blogvault. I develop optimiser plugin for WordPress websites. 
 							This includes optimising image, CSS, JS and fonts and caching them for faster loading of website.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
